--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,4 +1,27 @@
-<h2>Agendamento</h2>
+<!doctype html>
+   
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>Calendário jQuery</title>    
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css" />
+    <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
+    <script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
+
+
+    
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+</head>
+<body>
+    <p>Data: <input type="text" id="calendario" /></p>
+
+
+
+    <h2>Agendamento</h2>
 {% for posts in post %}
     <table>
         <p>Laboratório | {{posts.lab}}</p>
@@ -14,8 +37,40 @@
 <br>
 <br>
 <br>
-<form class="form" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button id="btnim" type="submit" class="button">Salvar</button>
-</form>
+
+
+<!-- Trigger the modal with a button -->
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add Reserva</button>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+  <div class="modal-dialog">
+  
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <form class="form" method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button id="btnim" type="submit" class="button">Salvar</button>
+    </form>
+
+      </div>
+    </div>
+    
+  </div>
+</div>
+
+<script>
+    $(function() {
+        $( "#calendario" ).datepicker().open();
+    });
+    </script>
+
+ </body>
+</html>
+
+
