--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,21 +1,74 @@
-<h2>Agendamento</h2>
-{% for posts in post %}
-    <table>
-        <p>Laboratório | {{posts.lab}}</p>
-        <p>Curso | {{ course }}</p>
-        <p>Nome | {{posts.name}}</p>
-        <p>Periodo | {{ period }}</p>
-        <p>Data | {{posts.create_date}}</p>
-        <h1>-----------------------</h1>
-    </table>
-    
-{% endfor %}
+{% load poll_extras %}
+<!DOCTYPE html>
+<html lang="PT-BR">
 
-<br>
-<br>
-<br>
-<form class="form" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button id="btnim" type="submit" class="button">Salvar</button>
-</form>
+    <head>
+            <title>AgendamentoFat</title>
+            <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    </head>
+
+    <body>
+            <h2>Agendamento</h2>
+            <h3>{{ msg }}</h3>
+            {% for posts in post %}
+                <table>
+                    <p>Laboratório | {{posts.lab}}</p>
+                    <!-- <p>Unidade | {{posts.unidade}}</p> -->
+                    <p>Unidade | {{posts.unidade|display_unidade_tag}}</p>
+                    <p>Curso | {{ course }}</p>
+                    <p>Nome | {{posts.name}}</p>
+                    <p>Periodo | {{ period }}</p>
+                    <p>Data | {{posts.create_date}}</p>
+                    <h1>-----------------------</h1>
+                </table>
+                
+            {% endfor %}
+            
+            <br>
+            <br>
+            <br>
+            
+        
+            <!--Modal-->
+            <div class="container">
+                <!-- Trigger the modal with a button -->
+                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Agendar</button>
+                
+                <!-- Modal -->
+                <div class="modal fade" id="myModal" role="dialog">
+                    <div class="modal-dialog">
+                    
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Modal Header</h4>
+                        </div>
+                        <div class="modal-body">
+
+                            <!--Form do agendamento-->
+                            <form class="form" method="POST">
+                                {% csrf_token %}
+                                {{ form.as_p }}
+                                <button class="btn btn-info btn-lg"  id="btnim" type="submit" class="button">Salvar</button>
+                            </form>
+
+                        </div>
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                    
+                    </div>
+                </div>
+                
+                </div>
+    </body>
+
+
+</html>
