--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,73 +1,94 @@
+{% load staticfiles %}
+{% load static %}
 {% load poll_extras %}
 <!DOCTYPE html>
 <html lang="PT-BR">
 
     <head>
-            <title>AgendamentoFat</title>
-            <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1">
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <title>AgendaFat</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
+        <link  rel="stylesheet" href="{% static 'css/style.css' %}">
     </head>
 
     <body>
-            <h2>Agendamento</h2>
-            <h3>{{ msg }}</h3>
-            {% for posts in post %}
-                <table>
-                    <p>Laboratório | {{posts.lab}}</p>
-                    <!-- <p>Unidade | {{posts.unidade}}</p> -->
-                    <p>Unidade | {{posts.unidade|display_unidade_tag}}</p>
-                    <p>Curso | {{ course }}</p>
-                    <p>Nome | {{posts.name}}</p>
-                    <p>Periodo | {{ period }}</p>
-                    <p>Data | {{posts.create_date}}</p>
-                    <h1>-----------------------</h1>
-                </table>
-                
-            {% endfor %}
-            
-            <br>
-            <br>
-            <br>
-            
-        
-            <!--Modal-->
-            <div class="container">
-                <!-- Trigger the modal with a button -->
+        <!-- Cabeçalho -->
+        <div class="jumbotron text-center">
+            <div class="logo">
+                <img src="{% static "blog/img/logo.png" %}" width="100">
+            </div><!-- Fim Logo -->
+
+            <h1>Agenda FAT</h1>
+            <h4>Agendamento dos Laboratórios de Informática</h4>
+            <p>{{ msg }}</p> 
+
+            <div class="btn_novo">
                 <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Agendar</button>
+            </div><!--Fim btn-->
+
+            
+            
+        </div><!--Fim Cabeçalho -->
+
+        <!-- Container dados do agendamento-->
+        <div class="container">
+            <div class="row">
+
+                {% for posts in post %}
+                <div class="col-sm-4">
+
+                <h3>Laboratório {{posts.lab}} | {{posts.unidade|display_unidade_tag}}</h3>
+                <!-- <p>Unidade | {{posts.unidade|display_unidade_tag}}</p> -->
+                <p>Curso | {{ posts.course }}</p>
+                <p>Nome | {{posts.name}}</p>
+                <p>Periodo | {{ posts.period }}</p>
+                <p>Data | {{posts.create_date}}</p>
+
+                </div>
+                {% endfor %}
                 
-                <!-- Modal -->
-                <div class="modal fade" id="myModal" role="dialog">
-                    <div class="modal-dialog">
-                    
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Modal Header</h4>
-                        </div>
-                        <div class="modal-body">
-
-                            <!--Form do agendamento-->
-                            <form class="form" method="POST">
-                                {% csrf_token %}
-                                {{ form.as_p }}
-                                <button class="btn btn-info btn-lg"  id="btnim" type="submit" class="button">Salvar</button>
-                            </form>
-
-                        </div>
-                        <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
+            </div>
+        </div><!-- Fim Container dados do agendamento-->
+        
+    
+        <!--Modal para adicionar evento-->
+        <div class="container">          
+            
+            <!-- Modal -->
+            <div class="modal fade" id="myModal" role="dialog">
+                <div class="modal-dialog">
+                
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Modal Header</h4>
                     </div>
-                    
+                    <div class="modal-body">
+
+                        <!--Form do agendamento-->
+                        <form class="form" method="POST">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <!-- <button class="btn btn-info btn-block"  id="btnim" type="submit" class="button">Salvar</button> -->
+                        </form>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-info btn-block"  id="btnim" type="submit" class="button">Salvar</button>
+                        <button type="button" class="btn btn-block" data-dismiss="modal">Cancelar</button>
                     </div>
                 </div>
                 
                 </div>
+            </div>
+            
+        </div><!--Fim Modal-->
     </body>
 
 
