add verificação na persistencia do post

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -28,6 +28,8 @@
             <script src="//cdn.bootcss.com/bootstrap-datetimepicker/4.17.44/js/bootstrap-datetimepicker.min.js"></script>
     
             <link  rel="stylesheet" href="{% static 'css/style.css' %}">
+
+            <!-- <a href="https://icons8.com">Icon pack by Icons8</a> -->
             
         </head>
 
